# find-my-sol

./: .gitignore  Cargo.toml  README.md  vanity_results.json
src/: main.rs  opencl.rs  utils.rs  vanity.rs
src/kernels/: vanity.cl
