[package]
name = "vanity"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
solana-sdk = "1.18"
bs58 = "0.5"
rand = "0.8"
rayon = "1.8"
ocl = "0.19"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
crossbeam-channel = "0.5"
indicatif = "0.17"
num_cpus = "0.2"
hex = "0.4"
base64 = "0.21"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
